--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4132,6 +4132,12 @@ blockquote {
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .demo-col-12 {
@@ -4141,7 +4147,25 @@ blockquote {
 .lt-ie8 .demo-col-12 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.demo-col-12:before,
+.demo-col-12:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.demo-col-12:before {
+  margin-bottom: 7.5px;
+}
+
+.demo-col-12:after {
+  margin-top: 7.5px;
 }
 
 .demo-col-6 {
@@ -4154,6 +4178,12 @@ blockquote {
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .demo-col-6 {
@@ -4163,7 +4193,25 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.demo-col-6:before,
+.demo-col-6:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.demo-col-6:before {
+  margin-bottom: 7.5px;
+}
+
+.demo-col-6:after {
+  margin-top: 7.5px;
 }
 
 .demo-col-6 {
@@ -4176,6 +4224,12 @@ blockquote {
   margin-right: -0.25em;
   vertical-align: top;
   width: 50%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .demo-col-6 {
@@ -4185,7 +4239,175 @@ blockquote {
 .lt-ie8 .demo-col-6 {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.demo-col-6:before,
+.demo-col-6:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.demo-col-6:before {
+  margin-bottom: 7.5px;
+}
+
+.demo-col-6:after {
+  margin-top: 7.5px;
+}
+
+/* Grid test
+   ========================================================================== */
+
+.col {
+  margin-top: 1em;
+}
+
+.col_1-2 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
+}
+
+.ie .col_1-2 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .col_1-2 {
+  display: inline;
+  *zoom: 1;
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.col_1-2:before,
+.col_1-2:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.col_1-2:before {
+  margin-bottom: 7.5px;
+}
+
+.col_1-2:after {
+  margin-top: 7.5px;
+}
+
+.col_1-2.col_p1 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+  padding-left: 50%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
+}
+
+.ie .col_1-2.col_p1 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .col_1-2.col_p1 {
+  display: inline;
+  *zoom: 1;
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.lt-ie8 .col_1-2.col_p1 {
+  padding-left: 0;
+}
+
+.col_1-2.col_p1:before,
+.col_1-2.col_p1:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.col_1-2.col_p1:before {
+  margin-bottom: 7.5px;
+}
+
+.col_1-2.col_p1:after {
+  margin-top: 7.5px;
+}
+
+.col_1-4 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
+}
+
+.ie .col_1-4 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .col_1-4 {
+  display: inline;
+  *zoom: 1;
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.col_1-4:before,
+.col_1-4:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.col_1-4:before {
+  margin-bottom: 7.5px;
+}
+
+.col_1-4:after {
+  margin-top: 7.5px;
 }
 
 /* Base styles
@@ -4459,7 +4681,7 @@ img {
 
 .lt-ie8 .wrapper {
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_bar {
@@ -4483,6 +4705,12 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .content_main,
@@ -4494,7 +4722,29 @@ img {
 .lt-ie8 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content_main:before,
+.content_sidebar:before,
+.content_main:after,
+.content_sidebar:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.content_main:before,
+.content_sidebar:before {
+  margin-bottom: 7.5px;
+}
+
+.content_main:after,
+.content_sidebar:after {
+  margin-top: 7.5px;
 }
 
 .header .demo-placeholder,
@@ -4513,6 +4763,12 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 75%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
   position: relative;
   left: 25%;
 }
@@ -4524,7 +4780,25 @@ img {
 .lt-ie8 .content__1-3 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__1-3 .content_main:before,
+.content__1-3 .content_main:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.content__1-3 .content_main:before {
+  margin-bottom: 7.5px;
+}
+
+.content__1-3 .content_main:after {
+  margin-top: 7.5px;
 }
 
 .content__1-3 .content_sidebar {
@@ -4537,6 +4811,12 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 25%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
   position: relative;
   right: 75%;
 }
@@ -4548,7 +4828,25 @@ img {
 .lt-ie8 .content__1-3 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__1-3 .content_sidebar:before,
+.content__1-3 .content_sidebar:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.content__1-3 .content_sidebar:before {
+  margin-bottom: 7.5px;
+}
+
+.content__1-3 .content_sidebar:after {
+  margin-top: 7.5px;
 }
 
 .content__2-1 .content_main {
@@ -4561,6 +4859,12 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 66.66666667%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .content__2-1 .content_main {
@@ -4570,7 +4874,25 @@ img {
 .lt-ie8 .content__2-1 .content_main {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__2-1 .content_main:before,
+.content__2-1 .content_main:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.content__2-1 .content_main:before {
+  margin-bottom: 7.5px;
+}
+
+.content__2-1 .content_main:after {
+  margin-top: 7.5px;
 }
 
 .content__2-1 .content_sidebar {
@@ -4583,6 +4905,12 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 33.33333333%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .content__2-1 .content_sidebar {
@@ -4592,7 +4920,25 @@ img {
 .lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__2-1 .content_sidebar:before,
+.content__2-1 .content_sidebar:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.content__2-1 .content_sidebar:before {
+  margin-bottom: 7.5px;
+}
+
+.content__2-1 .content_sidebar:after {
+  margin-top: 7.5px;
 }
 
 .content_main,
@@ -5446,7 +5792,7 @@ img {
 
 .lt-ie8 .hero_wrapper {
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .hero_wrapper {
@@ -5462,7 +5808,7 @@ img {
 
 .lt-ie8 .hero_wrapper {
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .hero_img-container {
@@ -5529,6 +5875,12 @@ img {
   vertical-align: top;
   width: 100%;
   padding-left: 50%;
+  border-left-color: #FFB149;
+  border-left-color: rgba(255, 158, 27, 0.25);
+  border-right-color: #FFB149;
+  border-right-color: rgba(255, 158, 27, 0.25);
+  background-color: #F6D9D3;
+  background-color: rgba(209, 33, 36, 0.2);
 }
 
 .ie .hero_card {
@@ -5538,11 +5890,29 @@ img {
 .lt-ie8 .hero_card {
   display: inline;
   *zoom: 1;
-  *behavior: url('http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .lt-ie8 .hero_card {
   padding-left: 0;
+}
+
+.hero_card:before,
+.hero_card:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7.5px;
+  background-color: #DA6750;
+  background-color: rgba(218, 103, 80, 0.75);
+}
+
+.hero_card:before {
+  margin-bottom: 7.5px;
+}
+
+.hero_card:after {
+  margin-top: 7.5px;
 }
 
 /* topdoc
