--- a/static/css/main.less
+++ b/static/css/main.less
@@ -11,13 +11,32 @@
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
 @cf-icons-path: "../fonts/";
-@box-sizing-polyfill-path: "http://himedlooff.github.io/cfgov-refresh/static/vendor/box-sizing-polyfill";
+@box-sizing-polyfill-path: "/cfgov-refresh/static/vendor/box-sizing-polyfill";
 
 
 /* Demo-specific styles
    ========================================================================== */
 
 @import (less) "demo.less";
+
+
+/* Grid test
+   ========================================================================== */
+
+@debug: true;
+.col {
+    margin-top: 1em;
+    &_1-2 {
+        .column(6);
+        &.col_p1 {
+            .column(6, @total-columns, 6);
+        }
+    }
+
+    &_1-4 {
+        .column(3);
+    }
+}
 
 
 /* Base styles
