--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4314,6 +4314,7 @@ blockquote {
 }
 
 .col_1-2.col_p1 {
+  position: relative;
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
