--- a/static/css/main.less
+++ b/static/css/main.less
@@ -29,6 +29,7 @@
     &_1-2 {
         .column(6);
         &.col_p1 {
+            position: relative;
             .column(6, @total-columns, 6);
         }
     }
