--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -259,10 +259,10 @@
     .u-respond-to-min(660px, {
         padding-top: unit(30px / @base-font-size-px, em);
 
-        // &_wrapper {
-        //     position: relative;
-        //     z-index: 2;
-        // }
+        &_wrapper {
+            position: relative;
+            z-index: 2;
+        }
 
         &_img-container__large {
             display: block;
@@ -274,13 +274,15 @@
         }
 
         &_card {
-            .column(6, @total-columns, 6);
+            .column(6);
+            .push(6);
         }
     });
 
     .u-respond-to-min(1024px, {
         &_card {
-            .column(4, @total-columns, 8);
+            .column(4);
+            .push(8);
         }
     });
 }
