--- a/static/css/main.less
+++ b/static/css/main.less
@@ -23,21 +23,21 @@
 /* Grid test
    ========================================================================== */
 
-@debug: true;
-.col {
-    margin-top: 1em;
-    &_1-2 {
-        .column(6);
-        &.col_p1 {
-            position: relative;
-            .column(6, @total-columns, 6);
-        }
-    }
+// @debug: true;
+// .col {
+//     margin-top: 1em;
+//     &_1-2 {
+//         .column(6);
+//         &.col_p1 {
+//             position: relative;
+//             .column(6, @total-columns, 6);
+//         }
+//     }
 
-    &_1-4 {
-        .column(3);
-    }
-}
+//     &_1-4 {
+//         .column(3);
+//     }
+// }
 
 
 /* Base styles
