--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5436,6 +5436,10 @@ img {
   background-color: #75787b;
 }
 
+.hero .lt-ie8 {
+  zoom: 1;
+}
+
 .hero_wrapper {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
