--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -203,6 +203,9 @@
     position: relative;
     overflow: hidden;
     background-color: @gray;
+    .lt-ie8 {
+        zoom: 1;
+    }
 
     .u-respond-to-min(801px, {
         &_wrapper {
