--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4872,6 +4872,9 @@ img {
   overflow: hidden;
   background-color: #75787b;
 }
+.hero .lt-ie8 {
+  zoom: 1;
+}
 @media only all and (min-width: 50.0625em) {
   .hero_wrapper {
     -webkit-box-sizing: border-box;
