--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -6,6 +6,9 @@
 .wrapper {
     .u-respond-to-min(801px, {
         .wrapper();
+        .lt-ie8 {
+            width: 100%;
+        }
     });
 }
 
