--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4465,6 +4465,10 @@ img {
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.wrapper .lt-ie8 {
+  width: 100%;
+}
+
 .content_bar {
   height: 10px;
   background: #2cb34a;
@@ -5470,6 +5474,10 @@ img {
 .lt-ie8 .hero_wrapper {
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.hero_wrapper .lt-ie8 {
+  width: 100%;
 }
 
 .hero_img-container {
