--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -204,7 +204,7 @@
     overflow: hidden;
     background-color: @gray;
     .lt-ie8 {
-        zoom: 1;
+        width: 100%;
     }
 
     .u-respond-to-min(801px, {
