--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4876,7 +4876,7 @@ img {
   background-color: #75787b;
 }
 .hero .lt-ie8 {
-  zoom: 1;
+  width: 100%;
 }
 @media only all and (min-width: 50.0625em) {
   .hero_wrapper {
