--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4465,10 +4465,6 @@ img {
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.wrapper .lt-ie8 {
-  width: 100%;
-}
-
 .content_bar {
   height: 10px;
   background: #2cb34a;
@@ -5472,10 +5468,6 @@ img {
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.hero_wrapper .lt-ie8 {
-  width: 100%;
-}
-
 .hero_img-container {
   display: none;
   line-height: 1;
@@ -5546,6 +5538,7 @@ img {
   width: 50%;
   position: relative;
   left: 50%;
+  margin-right: 0 !important;
 }
 
 .ie .hero_card {
