--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -276,6 +276,7 @@
         &_card {
             .column(6);
             .push(6);
+            margin-right: 0 !important;
         }
     });
 
@@ -283,6 +284,7 @@
         &_card {
             .column(4);
             .push(8);
+            margin-right: 0 !important;
         }
     });
 }
