--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -275,16 +275,16 @@
 
         &_card {
             .column(6);
-            .push(6);
-            margin-right: 0 !important;
+            // .push(6);
+            // margin-right: 0 !important;
         }
     });
 
     .u-respond-to-min(1024px, {
         &_card {
-            .column(4);
-            .push(8);
-            margin-right: 0 !important;
+            // .column(4);
+            // .push(8);
+            // margin-right: 0 !important;
         }
     });
 }
