--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -282,7 +282,7 @@
 
     .u-respond-to-min(1024px, {
         &_card {
-            // .column(4);
+            .column(4);
             // .push(8);
             // margin-right: 0 !important;
         }
