--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4972,6 +4972,7 @@ img {
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
+    margin-right: 0 !important;
   }
   .ie .hero_card {
     margin-right: -0.26em;
