--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -276,7 +276,7 @@
         &_card {
             .column(6);
             // .push(6);
-            // margin-right: 0 !important;
+            margin-right: 0 !important;
         }
     });
 
