--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -206,7 +206,7 @@
 
     .u-respond-to-min(801px, {
         &_wrapper {
-            .wrapper();
+            // .wrapper();
         }
     });
 
