--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3935,6 +3935,9 @@ img {
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
+.lt-ie8 .wrapper {
+  width: 960px;
+}
 .content_bar {
   height: 10px;
   background: #2cb34a;
