--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4943,7 +4943,31 @@ img {
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    margin-right: 0 !important;
+    position: relative;
+    left: 50%;
+  }
+  .ie .hero_card {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .hero_card {
+    display: inline;
+    *zoom: 1;
+    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 64em) {
+  .hero_card {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 33.33333333%;
+    position: relative;
+    left: 66.66666667%;
   }
   .ie .hero_card {
     margin-right: -0.26em;
