--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -8,7 +8,8 @@
         .wrapper();
     });
     .lt-ie8 & {
-        width: 960px;
+        min-width: 800px;
+        max-width: 960px;
     }
 }
 
