--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4450,6 +4450,7 @@ img {
    ========================================================================== */
 
 .wrapper {
+  width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
